更新逻辑优化，布局素材更新

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,51 @@ Pods/Target Support Files/Pods-PPVideoPlayer/Pods-PPVideoPlayer-acknowledgements
 Pods/Target Support Files/Pods-PPVideoPlayer/Pods-PPVideoPlayer-dummy.m
 Pods/Target Support Files/Pods-PPVideoPlayer/Pods-PPVideoPlayer-resources.sh
 PPVideoPlayer.xcworkspace/xcuserdata/cdmac666.xcuserdatad/UserInterfaceState.xcuserstate
+Frameworks/AlivcConan.framework/AlivcConan
+Frameworks/AlivcConan.framework/Headers/AlivcConanConstans.h
+Frameworks/AlivcConan.framework/Headers/AlivcConanDefine.h
+Frameworks/AlivcConan.framework/Headers/AlivcConanError.h
+Frameworks/AlivcConan.framework/Headers/AlivcConanExport.h
+Frameworks/AlivcConan.framework/Headers/AlivcConanHeader.h
+Frameworks/AlivcConan.framework/Headers/AlivcCrashConfig.h
+Frameworks/AlivcConan.framework/Headers/AlivcCrashHandle.h
+Frameworks/AlivcConan.framework/Headers/AlivcEventReport.h
+Frameworks/AlivcConan.framework/Headers/AlivcEventReportConfig.h
+Frameworks/AlivcConan.framework/Headers/AlivcEventReporter.h
+Frameworks/AlivcConan.framework/Headers/AlivcEventReporterConfig.h
+Frameworks/AlivcConan.framework/Headers/AlivcEventReporterDelegate.h
+Frameworks/AlivcConan.framework/Headers/AlivcEventReportListener.h
+Frameworks/AlivcConan.framework/Headers/AlivcLog.h
+Frameworks/AlivcConan.framework/Headers/AlivcLogConfig.h
+Frameworks/AlivcConan.framework/Headers/AlivcLogger.h
+Frameworks/AlivcConan.framework/Headers/AlivcLoggerConfig.h
+Frameworks/AlivcConan.framework/Headers/AlivcLoggerDelegate.h
+Frameworks/AlivcConan.framework/Headers/AlivcLogListener.h
+Frameworks/AlivcConan.framework/Info.plist
+Frameworks/alivcffmpeg.framework/alivcffmpeg
+Frameworks/alivcffmpeg.framework/Info.plist
+Frameworks/AliyunMediaDownloader.framework/AliyunMediaDownloader
+Frameworks/AliyunMediaDownloader.framework/Headers/AliMediaDownloader.h
+Frameworks/AliyunMediaDownloader.framework/Headers/AliyunMediaDownloader.h
+Frameworks/AliyunMediaDownloader.framework/Headers/AVDConfig.h
+Frameworks/AliyunMediaDownloader.framework/Info.plist
+Frameworks/AliyunPlayer.framework/AliyunPlayer
+Frameworks/AliyunPlayer.framework/Headers/AliListPlayer.h
+Frameworks/AliyunPlayer.framework/Headers/AliPlayer.h
+Frameworks/AliyunPlayer.framework/Headers/AliPrivateService.h
+Frameworks/AliyunPlayer.framework/Headers/AliyunPlayer.h
+Frameworks/AliyunPlayer.framework/Headers/AMDDelegate.h
+Frameworks/AliyunPlayer.framework/Headers/AVPCacheConfig.h
+Frameworks/AliyunPlayer.framework/Headers/AVPConfig.h
+Frameworks/AliyunPlayer.framework/Headers/AVPDef.h
+Frameworks/AliyunPlayer.framework/Headers/AVPDelegate.h
+Frameworks/AliyunPlayer.framework/Headers/AVPErrorCode.h
+Frameworks/AliyunPlayer.framework/Headers/AVPLiveKeyGenerator.h
+Frameworks/AliyunPlayer.framework/Headers/AVPLiveTimeShift.h
+Frameworks/AliyunPlayer.framework/Headers/AVPMediaInfo.h
+Frameworks/AliyunPlayer.framework/Headers/AVPSource.h
+Frameworks/AliyunPlayer.framework/Headers/VidPlayerConfigGen.h
+Frameworks/AliyunPlayer.framework/Info.plist
+Frameworks/artpSource.framework/artpSource
+Frameworks/artpSource.framework/Headers/ArtpFactory.h
+Frameworks/artpSource.framework/Info.plist
